main/default/objects/Internal_Resource_Role__c/Internal_Resource_Role__c.object-meta.xml
<CustomObject>
    <label>Internal Resource Role</label>
    <nameField>
        <displayFormat>IRN-{0000}</displayFormat>
        <label>Internal Resource Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Resource Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>