main/default/objects/Internal_Resource_Role__c/fields/Internal_Resource_Number_of_Role__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resource_Number_of_Role__c</fullName>
    <label>Internal Resource Number of Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>