main/default/objects/Internal_Resource_Role__c/fields/Internal_Resource_Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resource_Role_Description__c</fullName>
    <label>Internal Resource Role Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>