main/default/objects/Internal_Resource_Role__c/fields/Internal_Resource_Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resource_Role_Title__c</fullName>
    <label>Internal Resource Role Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>