main/default/objects/Internal_Resource_Role__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Internal Resource Roles</relationshipLabel>
    <relationshipName>Internal_Resource_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>